testsuite/tests/package/ImportReexport.stderr
ImportReexport.hs:2:1: error: [GHC-87110]
    Could not load module ‘GHC.Types’.
    It is a member of the hidden package ‘ghc-prim-0.14.0’.
    Use -v to see a list of the files searched for.

ImportReexport.hs:3:1: error: [GHC-87110]
    Could not load module ‘GHC.Platform.ArchOS’.
    It is a member of the hidden package ‘ghc-10.1’.
    It is a member of the hidden package ‘ghc-boot-10.0’.
    It is a member of the hidden package ‘ghc-platform-0.1.0.0’.
    Use -v to see a list of the files searched for.

