testsuite/tests/package/ImportReexport.hs
module ImportReexport where
import GHC.Types -- reexported and renamed by ghc-prim from ghc-internal
import GHC.Platform.ArchOS -- reexported by by ghc and ghc-boot + provided by ghc-platform
